# PinHan

./: .dockerignore  .gitignore  CLEANUP_SUMMARY.md  DIRECTORY_STRUCTURE.md  Dockerfile  LICENSE  QUICK_START.md  README.md  REFACTOR_LOG.md  TECH_REPORT.md  config.py  engine.py  engine_v2.py  pyproject.toml  quick_small_train.py  requirements.txt  run.bat  run.sh  verify_project.py  verify_vocab.py
api/: __init__.py  server.py
core/: __init__.py  dictionary.py
corrector/: __init__.py  corrector.py
data/: 10k.jsonl  5k.jsonl
dicts/: .gitkeep  __init__.py  bigram.json  char_dict.json  char_freq.json  dictionary.py  hanzi_to_pinyin.json  pinyin_table.txt  pinyin_to_hanzi.json  word_dict.json  word_freq.json
engine/: __init__.py  cache.py  config.py  core.py  dictionary.py  generator.py  logging.py
model/: __init__.py  checkpoint_manager.py  evaluate.py  git_utils.py  infer.py  infer_pinhan.py  infer_pinyin2hanzi.py  seq2seq_transformer.py  train.py  train_improvements.py  train_pinhan.py  train_pinyin2hanzi.py  train_utils.py
p2h/: __init__.py  model.py  train.py
pinhan/: __init__.py  cli.py
preprocess/: __init__.py  analyze_data.py  build_bigram.py  build_dict.py  build_training_data.py  data_generator.py  download_pinyin_dict.py  extract_and_clean.py  extract_corpus.py  pinyin_utils.py  sample_data.py  split_dataset.py  split_shards.py
scripts/: build_dict.py  build_training_data.py  data_generator.py  download_vocab.py  wiki_parser.py
segmenter/: __init__.py  segmenter.py
slm/: __init__.py  model.py  train.py  train_lite.py
tests/: TEST_GUIDE.md  config.py  conftest.py  datasets.py  run_tests.py  runner.py  test_comprehensive.py  test_context.py  test_dict.py  test_engine.py  test_integration.py  test_local.py  test_paragraph.py  test_performance.py  (+5 more)
(+31 files in other folders)
